--- a/CBQRC.html
+++ b/CBQRC.html
@@ -4,105 +4,166 @@
     <meta charset="UTF-8">
     <title>충북양자연구센터 (CBQRC)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Pretendard Font -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+    <!-- Remixicon for icons -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
     <style>
-        body { 
-            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, sans-serif; 
-            margin: 0; 
-            background: #f5f7fa; 
+        :root {
+            --main-blue: #23408e;
+            --sub-blue: #4fc3f7;
+            --gray-bg: #f5f7fa;
+            --card-bg: #fff;
+            --border-radius: 16px;
+            --shadow: 0 4px 16px rgba(35,64,142,0.08);
+        }
+        body {
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, sans-serif;
+            margin: 0;
+            background: var(--gray-bg);
             font-weight: 500;
+            color: #222;
         }
-        header { 
-            background: #2d3e50; 
-            color: #fff; 
-            padding: 40px 0; 
-            text-align: center; 
+        header {
+            background: linear-gradient(90deg, var(--main-blue) 60%, var(--sub-blue) 100%);
+            color: #fff;
+            padding: 48px 0 30px 0;
+            text-align: center;
+            position: relative;
         }
-        h1 {
+        .header-title {
+            font-size: 2.8em;
+            font-weight: 800;
+            letter-spacing: 2px;
+            margin-bottom: 8px;
+        }
+        .header-desc {
+            font-size: 1.2em;
+            font-weight: 600;
+            opacity: 0.92;
+        }
+        nav {
+            background: #fff;
+            box-shadow: 0 2px 8px rgba(35,64,142,0.06);
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            padding: 0;
+            border-bottom: 1px solid #e0e4ea;
+        }
+        nav a {
+            display: inline-block;
+            color: var(--main-blue);
+            text-decoration: none;
+            font-size: 1.08em;
             font-weight: 700;
-            font-size: 2.5em;
-            margin: 10px 0;
+            padding: 18px 0 16px 0;
+            transition: color 0.2s;
+            border-bottom: 3px solid transparent;
         }
-        nav { 
-            background: #1a232f; 
-            padding: 15px 0; 
-            font-weight: 700;
+        nav a:hover, nav a.active {
+            color: var(--sub-blue);
+            border-bottom: 3px solid var(--sub-blue);
         }
-        nav a { 
-            color: #fff; 
-            text-decoration: none; 
-            margin: 0 25px; 
-            font-size: 1.1em;
+        main {
+            max-width: 1100px;
+            margin: 40px auto 0 auto;
+            padding: 0 18px 48px 18px;
         }
-        nav a:hover { 
-            color: #4fc3f7; 
+        section {
+            margin-bottom: 38px;
         }
-        main { 
-            max-width: 1000px; 
-            margin: 40px auto; 
-            background: #fff; 
-            padding: 50px 40px; 
-            border-radius: 15px; 
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
+        .card {
+            background: var(--card-bg);
+            border-radius: var(--border-radius);
+            box-shadow: var(--shadow);
+            padding: 38px 32px 30px 32px;
+            margin-bottom: 28px;
         }
         h2 {
-            color: #2d3e50;
-            border-bottom: 3px solid #e0e4ea;
-            padding-bottom: 12px;
+            color: var(--main-blue);
+            font-size: 1.55em;
+            font-weight: 800;
+            margin-top: 0;
+            margin-bottom: 20px;
+            letter-spacing: 0.5px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        h2 i {
+            font-size: 1.1em;
+            color: var(--sub-blue);
+        }
+        ul {
+            padding-left: 20px;
+        }
+        .notice-list li {
+            margin-bottom: 7px;
+            font-size: 1.07em;
+        }
+        .contact-list {
+            list-style: none;
+            padding: 0;
+            font-size: 1.07em;
+        }
+        .contact-list li {
+            margin-bottom: 6px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .contact-list i {
+            color: var(--sub-blue);
+            font-size: 1.2em;
+        }
+        .btn-main {
+            display: inline-block;
+            background: var(--main-blue);
+            color: #fff;
             font-weight: 700;
-            font-size: 1.8em;
-        }
-        footer { 
-            text-align: center; 
-            color: #666; 
-            padding: 30px 0; 
-            background: #f0f0f0; 
-            margin-top: 60px;
-            font-weight: 500;
-        }
-        @media (max-width: 768px) {
-            main { padding: 30px 15px; }
-            nav a { margin: 0 15px; }
-        }
-        .main-image {
-            max-width: 800px;
-            margin: 30px auto;
+            border: none;
             border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            padding: 12px 32px;
+            font-size: 1.1em;
+            margin-top: 16px;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(35,64,142,0.07);
+            transition: background 0.2s;
+            text-decoration: none;
         }
-        .main-image img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
+        .btn-main:hover {
+            background: var(--sub-blue);
+            color: #fff;
+        }
+        @media (max-width: 800px) {
+            .card { padding: 24px 10px 20px 10px; }
+            main { padding: 0 2vw 36px 2vw; }
+            nav { gap: 18px; }
+        }
+        @media (max-width: 500px) {
+            .header-title { font-size: 2em; }
+            .header-desc { font-size: 1em; }
+            nav a { font-size: 1em; padding: 12px 0 10px 0;}
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>충북양자연구센터</h1>
-        <p style="font-weight: 600; font-size: 1.2em;">Chungbuk Quantum Research Center</p>
+        <div class="header-title">충북양자연구센터</div>
+        <div class="header-desc">Chungbuk Quantum Research Center</div>
     </header>
-    <nav>
-        <a href="#about">센터소개</a>
-        <a href="https://tjdgus5160.github.io/CBQRC.html">연구분야</a>
-        <a href="#news">공지사항</a>
-        <a href="#contact">연락처</a>
-    </nav>
     <main>
-        <section id="about">
-            <h2>센터소개</h2>
-            <p style="line-height: 1.7; font-size: 1.1em;">
+        <section id="about" class="card">
+            <h2><i class="ri-information-line"></i> 센터소개</h2>
+            <p style="line-height: 1.8; font-size: 1.11em;">
                 충북양자연구센터(CBQRC)는 국책사업 기획 및 출연연 공모사업 발굴 유치, 양자 물질 및 소자 원천기술 개발, 지역전략산업 연계 산업화 촉진, 산학연 협력체계 구축 등 양자기술 육성을 중점적으로 추진하는 기관입니다.<br>
                 과학기술정보통신부 인력양성 사업(대학ICT 연구센터)을 통해 양자 기초, 응용분야 연구역량 강화, 정부출연연구기관 및 도내 기업과의 공동연구, 스타트업 및 양자솔루션 기업 지원 등을 확대해 지역 양자산업을 선도할 우수 인재를 양성할 계획입니다.
             </p>
-            <div class="main-image">
-                <img src="https://tjdgus5160.github.io/CBQRC_quantum_korea.png" 
-                     alt="충북양자연구센터 연구 시설"
-                     style="display: block; margin: 20px auto; border: 1px solid #eee;">
-            </div>
+            <a href="mailto:kiwoong@cbnu.ac.kr" class="btn-main">문의하기</a>
         </section>
-        <section id="research">
-            <h2>추진</h2>
+        <section id="research" class="card">
+            <h2><i class="ri-flask-line"></i> 추진</h2>
             <ul style="line-height: 2; font-size: 1.1em;">
                 <li>양자기술 측정 장비 및 대상 물질 공동개발</li>
                 <li>양자기술 상호협력 및 공동연구</li>
@@ -110,24 +171,24 @@
                 <li>인력양성을 위한 협력관계 구축 및 인적교류</li>
             </ul>
         </section>
-        <section id="news">
-            <h2>공지사항</h2>
-            <ul style="line-height: 1.8; font-size: 1.1em;">
-                <li>.</li>
-                <li>2024.07.02 - 충북양자연구센터(CBQRC) 개소식</li>
+        <section id="news" class="card">
+            <h2><i class="ri-notification-3-line"></i> 공지사항</h2>
+            <ul class="notice-list">
+                <li><b>2025.06.24 ~ 2025.06.26</b> - 퀀텀 코리아 2025</li>
+                <li><b>2024.07.02</b> - 충북양자연구센터(CBQRC) 개소식</li>
             </ul>
         </section>
-        <section id="contact">
-            <h2>연락처</h2>
-            <p style="line-height: 1.7; font-size: 1.1em;">
-                ▸ 주소: 충청북도 청주시 서원구 충대로 1, 충북대학교학연산공동기술연구원 701호<br>
-                ▸ 전화: 043-261<br>
-                ▸ 이메일: kiwoong@cbnu.ac.kr
-            </p>
+        <section id="contact" class="card">
+            <h2><i class="ri-contacts-line"></i> 연락처</h2>
+            <ul class="contact-list">
+                <li><i class="ri-map-pin-line"></i> 주소: 충청북도 청주시 서원구 충대로 1, 충북대학교학연산공동기술연구원 701호</li>
+                <li><i class="ri-phone-line"></i> 전화: 043-261</li>
+                <li><i class="ri-mail-line"></i> 이메일: kiwoong@cbnu.ac.kr</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p style="margin: 0;">© 2025 Chungbuk Quantum Research Center. All rights reserved.</p>
+        <p style="margin: 0; text-align: center;">© 2024 Chungbuk Quantum Research Center</p>
     </footer>
 </body>
 </html>
