--- a/CBQRC.html
+++ b/CBQRC.html
@@ -146,6 +146,23 @@
             .header-desc { font-size: 1em; }
             nav a { font-size: 1em; padding: 12px 0 10px 0;}
         }
+        footer { 
+            text-align: center; 
+            color: #666; 
+            padding: 30px 0; 
+            background: #f0f0f0; 
+            margin-top: 60px;
+            font-weight: 500;
+        }
+        footer p { text-align: center; }
+        .career-list li {
+            display: flex;
+            justify-content: space-between; /* 좌우 끝 정렬 */
+            align-items: center;
+            margin-bottom: 7px;
+            font-size: 1.07em;
+            gap: 18px;
+        }
     </style>
 </head>
 <body>
