--- a/QMET.html
+++ b/QMET.html
@@ -529,7 +529,7 @@
                             </div>
                         </div>
                         <div class="text-xl font-medium bg-gradient-to-r from-indigo-400 via-cyan-400 to-purple-400 bg-clip-text text-transparent flex items-center">
-                            FutureNav
+                            QMET
                         </div>
                     </div>
                     <!-- Desktop Navigation -->
