--- a/QMET.html
+++ b/QMET.html
@@ -16,7 +16,7 @@
 			--secondary: #06b6d4;
 			--accent: #a855f7;
 			--dark-bg: #111827;
-			--darker-bg: #030712;
+			--darker-bg: #fff;
 			--text-primary: #f3f4f6;
 			--text-secondary: #9ca3af;
 			--navbar-bg: rgba(17, 24, 39, 0.7);
