--- a/QMET_HOME.html
+++ b/QMET_HOME.html
@@ -448,11 +448,11 @@ color-5.css
         <span></span>
     </div>
     <ul class="nav">
-        <li><a href="https://qmet.github.io/" class="active"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="https://qmet.github.io/professor"><i class="fa fa-user"></i>Professor</a></li>
-        <li><a href="https://qmet.github.io/members"><i class="fa fa-users"></i>Members</a></li>
-        <li><a href="https://qmet.github.io/papers"><i class="fa fa-file-text"></i>Papers</a></li>
-        <li><a href="https://qmet.github.io/activities"><i class="fa fa-briefcase"></i>Activities</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_HOME" class="active"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="https://tjdgus5160.github.io/Professor"><i class="fa fa-user"></i>Professor</a></li>
+        <li><a href="https://tjdgus5160.github.io/Members"><i class="fa fa-users"></i>Members</a></li>
+        <li><a href="https://tjdgus5160.github.io/Publications"><i class="fa fa-file-text"></i>Publications</a></li>
+        <li><a href="https://tjdgus5160.github.io/activity"><i class="fa fa-briefcase"></i>Activity</a></li>
     </ul>
 </div>
 
