--- a/QMET_Members.html
+++ b/QMET_Members.html
@@ -512,6 +512,21 @@ color-5.css
     </style>
 </head>
 <body class="dark">
+    <div class="aside">
+    <div class="logo">
+        <a href="index.html">QMET</a>
+    </div>
+    <div class="nav-toggler">
+        <span></span>
+    </div>
+    <ul class="nav">
+        <li><a href="https://tjdgus5160.github.io/QMET_HOME" class="active"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_Professor"><i class="fa fa-user"></i>Professor</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_Members"><i class="fa fa-users"></i>Members</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_Publications"><i class="fa fa-file-text"></i>Publications</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_Activity"><i class="fa fa-briefcase"></i>Activity</a></li>
+    </ul>
+</div>
     <div class="main-container">
 
 
