--- a/QMET_HOME.html
+++ b/QMET_HOME.html
@@ -442,7 +442,7 @@ color-5.css
   <!-- Aside Navigation -->
 <div class="aside">
     <div class="logo">
-        <a href="index.html">QMET</a>
+        <a href="https://tjdgus5160.github.io/QMET_HOME">QMET</a>
     </div>
     <div class="nav-toggler">
         <span></span>
