--- a/QMET_Professor.html
+++ b/QMET_Professor.html
@@ -45,7 +45,7 @@ body { line-height: 1.5; font-size: 16px; font-family: 'Poppins', sans-serif; }
     opacity: 1; 
     padding: 0 30px; 
     position: fixed; 
-    left: 0; 
+    left: 270px; 
     top: 0; 
     right: 0; 
     bottom: 0; 
